--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_753.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_753.jrxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.17.0.final using JasperReports Library version 6.17.0-6d93193241dd8cc42629e188b94f9e0bc5722efd  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="84b60fa9-2274-41f9-9d3c-35abb2202d9a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.3310000000000017"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="137"/>
@@ -20,212 +19,212 @@
 	<title>
 		<band height="79" splitType="Stretch">
 			<rectangle>
-				<reportElement mode="Opaque" x="0" y="0" width="555" height="79" forecolor="#7D933C" backcolor="#7D933C" uuid="bb69692b-2fd9-47f3-b006-512a1fa67eb7"/>
+				<reportElement mode="Opaque" x="0" y="0" width="555" height="79" forecolor="#7D933C" backcolor="#7D933C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="74" y="35" width="437" height="44" forecolor="#FFFFFF" uuid="4d49ed16-7ae9-4768-844e-7578ac1be6d4"/>
+				<reportElement x="74" y="35" width="437" height="44" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RESOLUCIÓN QUE RESUELVE RECURSOS INTERPUESTOS EXTEMPORANEAMENTE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="0" width="555" height="25" forecolor="#FFFFFF" uuid="023a2998-4621-4e25-af38-98158fb1a576"/>
+				<reportElement x="0" y="0" width="555" height="25" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Elección de Delegados 2022-2026]]></text>
+				<text><![CDATA[Elección de Delegados 2017-2020]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
 		<band height="44" splitType="Stretch">
 			<image>
-				<reportElement x="225" y="4" width="127" height="36" uuid="bfffef5f-4efe-4957-a741-e21cf660ea80"/>
-				<imageExpression><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
+				<reportElement x="225" y="4" width="127" height="36"/>
+				<imageExpression class="java.lang.String"><![CDATA[$P{rutaImagen}+"/icono_coomeva.png"]]></imageExpression>
 			</image>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="39" splitType="Stretch">
 			<rectangle>
-				<reportElement x="49" y="1" width="471" height="31" forecolor="#000000" uuid="9e2fda69-0364-400b-8e6a-b13005b8aad8"/>
+				<reportElement x="49" y="1" width="471" height="31" forecolor="#000000"/>
 			</rectangle>
 			<line>
-				<reportElement x="297" y="1" width="1" height="31" forecolor="#000000" uuid="b5b1a781-7b0b-421b-883d-30fd4e146eb2"/>
+				<reportElement x="297" y="1" width="1" height="31" forecolor="#000000"/>
 			</line>
 			<line>
-				<reportElement x="430" y="1" width="1" height="31" forecolor="#000000" uuid="e3ccdd0a-afd7-43bb-9865-ef5583583ae9"/>
+				<reportElement x="430" y="1" width="1" height="31" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="49" y="5" width="84" height="14" forecolor="#000000" uuid="11adf254-35d9-43f0-b0c9-9b43a7b92ac3"/>
+				<reportElement x="49" y="5" width="84" height="14" forecolor="#000000"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Zonal Electoral No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="305" y="5" width="29" height="14" forecolor="#000000" uuid="b0df2419-bcb4-4d9a-9536-2e53905c8e4b"/>
+				<reportElement x="305" y="5" width="29" height="14" forecolor="#000000"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="431" y="5" width="26" height="14" forecolor="#000000" uuid="55d3488b-f372-452c-a929-90ae9c592a56"/>
+				<reportElement x="431" y="5" width="26" height="14" forecolor="#000000"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Hora]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="50" y="1" width="470" height="4" forecolor="#000000" backcolor="#000000" uuid="6d3cc0ea-8f06-479a-a3b9-65c086d3d0a2"/>
+				<reportElement x="50" y="1" width="470" height="4" forecolor="#000000" backcolor="#000000"/>
 			</rectangle>
 			<textField isBlankWhenNull="true">
-				<reportElement x="133" y="12" width="161" height="20" uuid="30b80d30-e686-44c5-8e07-ee181e24af35"/>
+				<reportElement x="133" y="12" width="161" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
-				<textFieldExpression><![CDATA[$P{zona}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
 			</textField>
 			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-				<reportElement x="299" y="19" width="131" height="13" uuid="4986d5e3-9fea-4719-ad4c-03ad7e81aba2"/>
+				<reportElement x="299" y="19" width="131" height="13"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$P{fechaActual}]]></textFieldExpression>
+				<textFieldExpression class="java.util.Date"><![CDATA[$P{fechaActual}]]></textFieldExpression>
 			</textField>
 			<textField pattern="h.mm a" isBlankWhenNull="true">
-				<reportElement x="431" y="19" width="89" height="13" uuid="89e87c90-0025-4a99-9242-fda8a6499658"/>
+				<reportElement x="431" y="19" width="89" height="13"/>
 				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$P{fechaActual}]]></textFieldExpression>
+				<textFieldExpression class="java.util.Date"><![CDATA[$P{fechaActual}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="338" splitType="Stretch">
 			<staticText>
-				<reportElement x="69" y="14" width="441" height="20" forecolor="#000000" uuid="54982059-5b64-4531-8611-f4167bd2557c"/>
+				<reportElement x="69" y="14" width="441" height="20" forecolor="#000000"/>
 				<textElement>
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Asociado(a) ______________________________________________________________________ (Cabeza de Plancha)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="69" y="174" width="430" height="34" forecolor="#000000" uuid="77d29583-9aa9-4caf-8c31-fb4149c7aee2"/>
+				<reportElement x="69" y="174" width="430" height="34" forecolor="#000000"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[En constancia se firma el día _____ del mes __________________________________ del año ________.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="88" y="223" width="121" height="11" forecolor="#000000" uuid="189c32b4-cb7e-4af8-80cf-c1dbafb60970"/>
+				<reportElement x="88" y="223" width="121" height="11" forecolor="#000000"/>
 				<textElement>
 					<font size="7"/>
 				</textElement>
 				<text><![CDATA[Nombre Y Firma del Presidente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="88" y="258" width="246" height="12" forecolor="#000000" uuid="8f603ff4-4c4a-43b9-8a12-fa6c122db7d0"/>
+				<reportElement x="88" y="258" width="246" height="12" forecolor="#000000"/>
 				<textElement>
 					<font size="7"/>
 				</textElement>
 				<text><![CDATA[Nombre Y Firma del Secretario]]></text>
 			</staticText>
 			<line>
-				<reportElement x="70" y="223" width="339" height="1" forecolor="#000000" uuid="d3a10ada-4833-439c-8a77-75a28eb4ca1a"/>
+				<reportElement x="70" y="223" width="339" height="1" forecolor="#000000"/>
 			</line>
 			<line>
-				<reportElement x="69" y="256" width="340" height="2" forecolor="#000000" uuid="9c6c7b69-6e38-4f0f-9899-b53f0f3a78e6"/>
+				<reportElement x="69" y="256" width="340" height="2" forecolor="#000000"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="119" y="7" width="311" height="20" uuid="96fa9afa-4424-4ae9-af29-e7074821e338"/>
+				<reportElement x="119" y="7" width="311" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$P{nombre}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="185" y="174" width="24" height="22" uuid="32f314c6-6b40-4d01-9e64-9e987de8a924"/>
+				<reportElement x="185" y="174" width="24" height="22"/>
 				<textElement textAlignment="Center">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{dia}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{dia}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="249" y="174" width="160" height="20" uuid="5bd894d7-b896-40b1-8763-6747a757ba1b"/>
+				<reportElement x="249" y="174" width="160" height="20"/>
 				<textElement textAlignment="Center">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{mes}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{mes}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="471" y="174" width="39" height="20" uuid="0cfa03a6-1f70-4484-984d-19756e8ab962"/>
+				<reportElement x="471" y="174" width="39" height="20"/>
 				<textElement textAlignment="Center">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{anio}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="70" y="42" width="440" height="128" uuid="c7f1c7fa-d4d3-43e7-890c-075fde13dd52"/>
-				<textElement textAlignment="Left">
+				<reportElement x="70" y="42" width="440" height="128"/>
+				<textElement textAlignment="Left" lineSpacing="1_1_2">
 					<font size="9"/>
-					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
 				<text><![CDATA[La- El _____________________________________________________________________________ (Comisión Electoral, Tribunal de Elecciones y Escrutinios) de la Zona Electoral No. __________ expide Resolución No. __________ declarando desierto el recurso presentado el día ______ por haber sido interpuesto posterior a los dos (2) días hábiles siguientes a la fecha de notificación de la resolución, considerándose el mismo como extemporáneo.
 
 Contra la presente Resolución no procede recurso alguno de acuerdo a lo estipulado en el Articulo 104 del Código Electoral]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="391" y="56" width="57" height="20" uuid="40e8e816-7152-4e72-aba8-2422e9e949e5"/>
+				<reportElement x="391" y="56" width="57" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{zona}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{zona}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="129" y="72" width="54" height="20" uuid="b6b35589-eceb-4c4c-98bd-54d0d42cf821"/>
+				<reportElement x="129" y="72" width="54" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{resolucion}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="98" y="43" width="413" height="15" uuid="09c552aa-735d-41af-bb5e-d81fbf555d83"/>
+				<reportElement x="98" y="43" width="413" height="15"/>
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{nombreComision}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreComision}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="374" y="73" width="33" height="20" uuid="1643c4d2-3191-4553-a1a4-b20df81206e4"/>
+				<reportElement x="374" y="73" width="33" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{diaPresntado}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{diaPresntado}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="16" y="7" width="22" height="237" uuid="38d940d8-6d2f-4fbc-aa00-db221fd513fb"/>
+				<reportElement x="16" y="7" width="22" height="237"/>
 				<textElement rotation="Left">
 					<font size="6" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vigilado por la superintendencia de la Economia Solidaria NIT.:890.300.625-1]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement x="0" y="285" width="555" height="36" forecolor="#7D933C" backcolor="#7D933C" uuid="769fb0f2-b0b4-4c12-bc42-458f52f1eec9"/>
+				<reportElement x="0" y="285" width="555" height="36" forecolor="#7D933C" backcolor="#7D933C"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="50" y="285" width="471" height="36" forecolor="#FFFFFF" uuid="d636ba3c-d1a4-40b7-adb7-6e1743afe5ec"/>
+				<reportElement x="50" y="285" width="471" height="36" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="50" y="321" width="100" height="14" uuid="bea97603-754e-40e3-9b23-f8a00710ac9b"/>
+				<reportElement x="50" y="321" width="100" height="14"/>
+				<textElement/>
 				<text><![CDATA[CO-FT-753]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="420" y="321" width="100" height="14" uuid="2263751e-509d-48f1-a5ac-fb5213ccd990"/>
+				<reportElement x="420" y="321" width="100" height="14"/>
 				<textElement textAlignment="Right"/>
 				<text><![CDATA[Mod.Agosto 2016]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement mode="Transparent" x="49" y="0" width="471" height="283" uuid="b3de6883-c2be-451e-a323-b13ab5f29545"/>
+				<reportElement mode="Transparent" x="49" y="0" width="471" height="283"/>
 			</rectangle>
 		</band>
 	</detail>
